Bug 168674 - Assertion fires when editing a formula in formula bar in debug build
Summary: Assertion fires when editing a formula in formula bar in debug build
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
: 167138 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-03 08:54 UTC by Mike Kaganski
Modified: 2025-10-03 11:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-10-03 08:54:19 UTC
Using a debug build:

1. Create a Calc document.
2. Mouse-click to the formula bar
3. Enter "=1"
4. Press Enter

=> assertion fires at [1].

Introduced in commit e1972743d692c8d8611912c31aae2cb08ae7636d. Noel: could you please take a look, what goes wrong here; why this is called, when it shouldn't (or why doesn't it set the respective flag)?

[1] https://opengrok.libreoffice.org/xref/core/editeng/source/editeng/impedit2.cxx?r=f9af3767bd0572954a375cd4107ae2ab460a7de3#3208
Comment 1 Noel Grandin 2025-10-03 09:14:33 UTC
fix is at   https://gerrit.libreoffice.org/c/core/+/191814
Comment 2 Commit Notification 2025-10-03 10:30:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6c809b021312dbda2964aa98beebb872bdbd81a

tdf#168674 Assertion fires when editing a formula in formula bar in debug

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Regina Henschel 2025-10-03 11:57:31 UTC
Wonderful. I had reported the problem already in bug 167138, but that had not got any attention.
Comment 4 Regina Henschel 2025-10-03 11:58:29 UTC
*** Bug 167138 has been marked as a duplicate of this bug. ***