tdf#168674 Assertion fires when editing a formula in formula bar in debug

on Windows, this assert fires because we have a stack like:

 	editenglo.dll!ImpEditEngine::PaMtoEditCursor
	editenglo.dll!ImpEditEngine::Command
    ....
 	sclo.dll!ScTabView::ActiveGrabFocus
 	sclo.dll!ScInputHandler::EnterHandler2

where EnterHandler2 is disabling layout, but during the focus grab,
on Windows, some  SalInputContext code is triggered, which then
needs the layout.

Change-Id: I14b213af57a8e78f3983f0fd96110888906b43d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191814
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>